--- a/client/assets/base.scss
+++ b/client/assets/base.scss
@@ -431,65 +431,65 @@ button{
   grid-template-columns: repeat(auto-fit, minmax(220px, auto));
   grid-template-rows: repeat(auto-fit, minmax(auto, auto));
 }
-.card {
-  position: relative;
-  @extend .shadow;
-  padding: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  &:hover {
-    @extend .shadow-hover;
-  }
-  p {
-    padding: 2px 0;
-  }
-  a {
-    @extend .link_style;
-  }
-  &__action {
-    width: 90%;
-    height: 30px;
-    background: #fa6262;
-    position: absolute;
-    top: 50px;
-    left: -50px;
-    text-align: center;
-    line-height: 30px;
-    color: white;
-    opacity: 0.5;
-    transform: rotate(-45deg);
-  }
-  &__name {
-    margin-top: 12px;
-    margin-bottom: 5px;
-    text-transform: uppercase;
-    font-size: 16px;
-    text-align: center;
-  }
-}
-.card--left-right {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  margin-bottom: 3px;
-}
-.card--text-crossed  {
-    text-decoration: line-through;
-    font-size: 13px;
-    font-weight: 700;
-}
-.card--red-text {
-  color: rgb(252,98,91);
-  font-size: 16px;
-  font-weight: 700;
-}
-.card__price--text {
-    font-size: 16px;
-    font-weight: 700;
-    padding: 2px 5px;
-    background-color: rgba(252, 99, 91, 0.18);
-}
+// .card {
+//   position: relative;
+//   @extend .shadow;
+//   padding: 5px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   &:hover {
+//     @extend .shadow-hover;
+//   }
+//   p {
+//     padding: 2px 0;
+//   }
+//   a {
+//     @extend .link_style;
+//   }
+//   &__action {
+//     width: 90%;
+//     height: 30px;
+//     background: #fa6262;
+//     position: absolute;
+//     top: 50px;
+//     left: -50px;
+//     text-align: center;
+//     line-height: 30px;
+//     color: white;
+//     opacity: 0.5;
+//     transform: rotate(-45deg);
+//   }
+//   &__name {
+//     margin-top: 12px;
+//     margin-bottom: 5px;
+//     text-transform: uppercase;
+//     font-size: 16px;
+//     text-align: center;
+//   }
+// }
+// .card--left-right {
+//   display: flex;
+//   justify-content: space-between;
+//   margin: 0;
+//   margin-bottom: 3px;
+// }
+// .card--text-crossed  {
+//     text-decoration: line-through;
+//     font-size: 13px;
+//     font-weight: 700;
+// }
+// .card--red-text {
+//   color: rgb(252,98,91);
+//   font-size: 16px;
+//   font-weight: 700;
+// }
+// .card__price--text {
+//     font-size: 16px;
+//     font-weight: 700;
+//     padding: 2px 5px;
+//     background-color: rgba(252, 99, 91, 0.18);
+// }
 // Paginator
 .pagination {
   display: flex;
