--- a/client/assets/base.scss
+++ b/client/assets/base.scss
@@ -2,18 +2,20 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-$text-color: #2E4053;
-$green-color: #85C987;
+$text-color: #2e4053;
+$green-color: #85c987;
 $global_blue: #428bca;
 $color-red: #d9534f;
 html {
   height: 100%;
   color: $text-color;
 }
-li {list-style: none;}
-hr{
+li {
+  list-style: none;
+}
+hr {
   border: none;
   margin-bottom: 12px;
   margin-top: 12px;
@@ -24,7 +26,8 @@ img {
   height: auto;
   max-width: 100%;
 }
-h1, h2{
+h1,
+h2 {
   margin: 0;
   padding: 0;
 }
@@ -48,7 +51,7 @@ h1, h2{
   border: 1px solid;
 }
 .shadow {
-  box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 .shadow-hover {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.61);
@@ -68,7 +71,7 @@ h1, h2{
 //   border: 1px $green-color solid;
 //   outline: none;
 // }
-button{
+button {
   border: none;
   text-decoration: none;
   outline: none;
@@ -200,7 +203,7 @@ button{
   //   @media (max-width: 970px) {
   //     flex-direction: column;
   //   }
-    
+
   //   .toggle {
   //     align-items: center;
   //     visibility: hidden;
@@ -277,27 +280,27 @@ button{
   //     }
   //   }
   // }
-  .breadcrumbs {
-    @extend .padding-12;
-    display: flex;
-    font-size: 14px;
-    @media (max-width: 640px) {
-      flex-direction: column;
-    }
-    li {
-      a {
-        @extend .link_style;
-        color: $green-color;
-        margin-right: 3px;
-        &::after {
-          cursor: default;
-          content: "\002F";
-          color: $text-color;
-          margin-left: 3px;
-        }
-      }
-    }
-  }
+  // .breadcrumbs {
+  //   @extend .padding-12;
+  //   display: flex;
+  //   font-size: 14px;
+  //   @media (max-width: 640px) {
+  //     flex-direction: column;
+  //   }
+  //   li {
+  //     a {
+  //       @extend .link_style;
+  //       color: $green-color;
+  //       margin-right: 3px;
+  //       &::after {
+  //         cursor: default;
+  //         content: "\002F";
+  //         color: $text-color;
+  //         margin-left: 3px;
+  //       }
+  //     }
+  //   }
+  // }
 }
 // .footer {
 //   @extend .padding-12;
@@ -330,7 +333,6 @@ button{
 //     // @extend .space-between;
 //     width: 260px;
 //     height: auto;
-    
 
 //     image {
 //       max-width: 100%;
@@ -361,7 +363,7 @@ button{
 //     margin-right: 5px;
 //   }
 // }
-.form-footer{
+.form-footer {
   display: flex;
   justify-content: space-between;
 }
@@ -423,10 +425,11 @@ button{
 //   }
 // }
 .card-grid {
-  padding-top: 5px;
+  // padding-top: 5px;
+  // margin-top: 20px;
   display: grid;
-  gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+  gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, auto));
   grid-template-rows: repeat(auto-fit, minmax(auto, auto));
 }
 // .card {
@@ -492,7 +495,7 @@ button{
 .pagination {
   display: flex;
   justify-content: center;
-  width:auto;
+  width: auto;
   padding: 24px;
   a {
     color: $text-color;
@@ -504,7 +507,8 @@ button{
       color: white;
     }
   }
-  select[name=pay_method], select[name=delivery_method]{
+  select[name="pay_method"],
+  select[name="delivery_method"] {
     border: 1px solid $green-color;
     background-color: white;
     padding: 5px;
@@ -523,7 +527,7 @@ button{
 //   grid-template-rows: auto;
 //   grid-template-areas: "head head head"
 //                       "img feature descript";
-  
+
 //   @media (max-width: 680px) {
 //     grid-template-columns: 60% auto;
 //     grid-template-areas: "head head"
@@ -574,11 +578,12 @@ button{
 //   }
 // }
 // Table
-table{
+table {
   margin-top: 12px;
   margin-bottom: 12px;
 }
-th, td {
+th,
+td {
   padding: 0.25rem;
   text-align: left;
   border: 1px solid #ccc;
@@ -586,34 +591,44 @@ th, td {
 tbody tr:nth-child(odd) {
   background: #eee;
 }
-table {text-align: center;}
-@media only screen and (max-width: 760px), (min-width: 768px) and (max-width: 1024px)  {
-  table, thead, tbody, th, td, tr {
-      display: block;
+table {
+  text-align: center;
+}
+@media only screen and (max-width: 760px),
+  (min-width: 768px) and (max-width: 1024px) {
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
   }
   thead tr {
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
   }
-  tr{ border: 1px solid #ccc; }
+  tr {
+    border: 1px solid #ccc;
+  }
   td {
-      border: none!important;
-      width: 100%!important;
-      position: relative;
-      padding-left: 50%;
+    border: none !important;
+    width: 100% !important;
+    position: relative;
+    padding-left: 50%;
   }
   td:before {
-      position: absolute;
-      top: 6px;
-      left: 6px;
-      width: 45%;
-      padding-right: 10px;
-      white-space: nowrap;
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
   }
 }
 
-.flat_block{
+.flat_block {
   @extend .padding-12;
   // @extend .shadow;
   // @extend .color--grey;
@@ -627,7 +642,7 @@ table {text-align: center;}
     }
   }
 }
-.card_header{
+.card_header {
   text-align: center;
   font-weight: bolder;
 }
@@ -660,101 +675,133 @@ table {text-align: center;}
 // }
 
 /* CART */
-.cart_list{
-    display: grid;
-    grid-template-rows: auto auto auto auto auto auto auto auto;
-    /* grid-template-columns: 50px auto auto auto 100px auto 140px; */
-}
-
-.cart_list span{
-    padding: 5px;
-    text-align: left;
-}
-.cart_list span a{
-    text-decoration: none;
-    color: #428bca;
-}
-.img_list{
-    width: 40px;
-    height: 40px;
-}
-
-.cart_button button{
-    width: 48%;
-    height: 32px;
-    margin-top: 12px;
-    margin-bottom: 12px;
-}
-/* CART */
-.cart_list{
+.cart_list {
   display: grid;
   grid-template-rows: auto auto auto auto auto auto auto auto;
   /* grid-template-columns: 50px auto auto auto 100px auto 140px; */
 }
 
-.cart_list span{
+.cart_list span {
   padding: 5px;
   text-align: left;
 }
-.cart_list span a{
+.cart_list span a {
   text-decoration: none;
   color: #428bca;
 }
-.img_list{
+.img_list {
   width: 40px;
   height: 40px;
 }
 
-.cart_button button{
+.cart_button button {
+  width: 48%;
+  height: 32px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+/* CART */
+.cart_list {
+  display: grid;
+  grid-template-rows: auto auto auto auto auto auto auto auto;
+  /* grid-template-columns: 50px auto auto auto 100px auto 140px; */
+}
+
+.cart_list span {
+  padding: 5px;
+  text-align: left;
+}
+.cart_list span a {
+  text-decoration: none;
+  color: #428bca;
+}
+.img_list {
+  width: 40px;
+  height: 40px;
+}
+
+.cart_button button {
   width: 48%;
   height: 32px;
   margin-top: 12px;
   margin-bottom: 12px;
 }
 /* cart_list */
-@media (min-width: 1200px){
-  .cart_list{grid-template-columns: auto auto auto auto auto 140px auto auto;}
-  .s-hr{display: none;}
-  .cart_list span b{display: none;}
-  .cart_list span{ border-bottom: 1px solid var(--global_geen);}
-}
-@media (min-width: 992px) and (max-width: 1199px){
-  .cart_list{grid-template-columns: auto auto auto auto auto 140px auto auto;}
-  .s-hr{display: none;}
-  .cart_list span b{display: none;}
-  .cart_list span{border-bottom: 1px solid var(--global_geen);}
-}
-@media (min-width: 768px) and (max-width: 991px){
-  .cart_list img{
-      width: 100%;
-      height: 100%;
+@media (min-width: 1200px) {
+  .cart_list {
+    grid-template-columns: auto auto auto auto auto 140px auto auto;
   }
-  .s{display: none;}
-  .cart_list span{border-bottom: none;}
-}
-@media (max-width: 767px){
-  .cart_list img{
-      width: 100%;
-      height: 100%;
+  .s-hr {
+    display: none;
   }
-  .s{display: none;}
-  .cart_list span{border-bottom: none;}
-}
-@media (max-width: 650px){
-  .cart_list img{
-      width: 100%;
-      height: 100%;
+  .cart_list span b {
+    display: none;
   }
-  .s{display: none;}
-  .cart_list span{border-bottom: none;}
-}
-@media (max-width: 480px){
-  .cart_list img{
-      width: 100%;
-      height: 100%;
+  .cart_list span {
+    border-bottom: 1px solid var(--global_geen);
   }
-  .s{display: none;}
-  .cart_list span{border-bottom: none;}
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .cart_list {
+    grid-template-columns: auto auto auto auto auto 140px auto auto;
+  }
+  .s-hr {
+    display: none;
+  }
+  .cart_list span b {
+    display: none;
+  }
+  .cart_list span {
+    border-bottom: 1px solid var(--global_geen);
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cart_list img {
+    width: 100%;
+    height: 100%;
+  }
+  .s {
+    display: none;
+  }
+  .cart_list span {
+    border-bottom: none;
+  }
+}
+@media (max-width: 767px) {
+  .cart_list img {
+    width: 100%;
+    height: 100%;
+  }
+  .s {
+    display: none;
+  }
+  .cart_list span {
+    border-bottom: none;
+  }
+}
+@media (max-width: 650px) {
+  .cart_list img {
+    width: 100%;
+    height: 100%;
+  }
+  .s {
+    display: none;
+  }
+  .cart_list span {
+    border-bottom: none;
+  }
+}
+@media (max-width: 480px) {
+  .cart_list img {
+    width: 100%;
+    height: 100%;
+  }
+  .s {
+    display: none;
+  }
+  .cart_list span {
+    border-bottom: none;
+  }
 }
 
 .msg {
@@ -766,7 +813,7 @@ table {text-align: center;}
   // border: 2px solid $green-color;
   border-radius: 6px;
 }
-.error-msg{
+.error-msg {
   background: #ffd4d4;
 }
 .acss-msg {
