--- a/client/assets/main.scss
+++ b/client/assets/main.scss
@@ -1,7 +1,8 @@
-$text-color: #2E4053;
-$green-color: #85C987;
+$text-color: #2e4053;
+$green-color: #85c987;
 $global_blue: #428bca;
-$color-red: #d9534f;
+$color_red: #d9534f;
+$grey: #929292;
 
 .padding-12 {
   padding: 12px 24px;
@@ -17,6 +18,7 @@ $color-red: #d9534f;
 }
 .header-for-block {
   padding-left: 8px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
