--- a/client/assets/animation.scss
+++ b/client/assets/animation.scss
@@ -1,20 +1,82 @@
+.scale_up {
+  animation: scale_up 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+@keyframes scale_up {
+  0% {
+    transform: scaleY(0.1);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 100% 0%;
+  }
+}
+
+.scale_down {
+  animation: scale_down 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+@keyframes scale_down {
+  0% {
+    transform: scaleY(1);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    transform: scaleY(0.1);
+    transform-origin: 100% 0%;
+  }
+}
+
 .pulse {
   animation-name: pulse;
   animation-duration: 0.5s;
   animation-fill-mode: both;
-  animation-iteration-count: infinite
-  }
-  @keyframes pulse {
+  animation-iteration-count: infinite;
+}
+@keyframes pulse {
   0% {
-  -webkit-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
   50% {
-  -webkit-transform: scale3d(1.5, 1.5, 1.5);
-  transform: scale3d(1.5, 1.5, 1.5);
+    -webkit-transform: scale3d(1.5, 1.5, 1.5);
+    transform: scale3d(1.5, 1.5, 1.5);
   }
   100% {
-  -webkit-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
-  } 
+}
+
+.zoomIn {
+  animation-name: zoomIn;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+.zoomOut {
+  animation-name: zoomOut;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
+
+@keyframes zoomOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  100% {
+    opacity: 0;
+  }
+}
