--- a/client/assets/card.scss
+++ b/client/assets/card.scss
@@ -1,5 +1,5 @@
-@import '@/assets/color.scss';
-@import '@/assets/main.scss';
+@import "@/assets/color.scss";
+@import "@/assets/main.scss";
 
 .shadow {
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
@@ -63,6 +63,12 @@
   &__body {
     margin: 5px 0;
   }
+}
+.price {
+  @extend .padding-5;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: rgba(252, 99, 91, 0.18);
 }
 .card--left-right {
   display: flex;
