--- a/templates/email/order_client.html
+++ b/templates/email/order_client.html
@@ -10,7 +10,7 @@
     <tbody>
       <tr>
         <td>
-            <a href="https://orten.in.ua/"><img src="https://orten.in.ua/static/shop/img/logo.png" alt="Ортен - розничный и оптовый интернет-магазин печатной и компьютерной техники в Николаеве" title="Копировальная техника и расходные материалы ★ Компьютеры и комплектующие ★ Полиграфическое оборудование и расходные материалы ★ Оперативная полиграфия ★ Диагностика и ремонт копировальной техники и компьютеров" width="220" height="88"hspace="16"></a>
+            <a href="https://orten.in.ua/"><img src="https://orten.in.ua/logo.png" alt="Ортен - розничный и оптовый интернет-магазин печатной и компьютерной техники в Николаеве" title="Копировальная техника и расходные материалы ★ Компьютеры и комплектующие ★ Полиграфическое оборудование и расходные материалы ★ Оперативная полиграфия ★ Диагностика и ремонт копировальной техники и компьютеров" width="220" height="88"hspace="16"></a>
         </td>
         <td style="font-size: 12px; text-align: left; padding: 7px;">
           г. Николаев пр. Мира, 5
