--- a/templates/email/order_admin.html
+++ b/templates/email/order_admin.html
@@ -35,7 +35,7 @@
                 color: #222222;
               "
             >
-              Детали заказа
+              Деталі замовлення
             </td>
             <td
               style="
@@ -49,7 +49,7 @@
                 color: #222222;
               "
             >
-              Клиент
+              Клієнт
             </td>
           </tr>
         </thead>
@@ -64,11 +64,11 @@
                 padding: 7px;
               "
             >
-              <b>№ заказа:</b> {{order.id}}
+              <b>№ замовлення:</b> {{order.id}}
               <br />
-              <b>Спопсоб доставки:</b> {{order.delivery_method}}
+              <b>Спосіб доставки:</b> {{order.delivery_method}}
               <br />
-              <b>Спопсоб оплаты:</b> {{order.pay_method}}
+              <b>Спосіб оплати:</b> {{order.pay_method}}
             </td>
             <td
               style="
@@ -79,7 +79,7 @@
                 padding: 7px;
               "
             >
-              <b>Клиент:</b> {{order.name}}
+              <b>Клієнт:</b> {{order.name}}
               {{order.sur_name}}
               <br />
               <b>Телефон:</b> {{order.phone}}
@@ -113,7 +113,7 @@
                 color: #222222;
               "
             >
-              Примечание
+              Примітка
             </td>
           </tr>
         </thead>
@@ -185,7 +185,7 @@
                 color: #222222;
               "
             >
-              Количество
+              Кількість
             </td>
             <td
               style="
