--- a/templates/email/order_client.html
+++ b/templates/email/order_client.html
@@ -13,7 +13,7 @@
             <a href="https://orten.in.ua/"><img src="https://orten.in.ua/logo.png" alt="Ортен - розничный и оптовый интернет-магазин печатной и компьютерной техники в Николаеве" title="Копировальная техника и расходные материалы ★ Компьютеры и комплектующие ★ Полиграфическое оборудование и расходные материалы ★ Оперативная полиграфия ★ Диагностика и ремонт копировальной техники и компьютеров" width="220" height="88"hspace="16"></a>
         </td>
         <td style="font-size: 12px; text-align: left; padding: 7px;">
-          г. Николаев пр. Мира, 5
+          м. Миколаїв пр. Миру, 5
           <br>
           <a class="text-muted" href="mailto:orten_office@ukr.net">orten_office@ukr.net</a>
           <br>
@@ -48,7 +48,7 @@
                 color: #222222;
               "
             >
-              Детали заказа
+              Деталі замовлення
             </td>
             <td
               style="
@@ -62,7 +62,7 @@
                 color: #222222;
               "
             >
-              Клиент
+              Клієнт
             </td>
           </tr>
         </thead>
@@ -77,11 +77,11 @@
                 padding: 7px;
               "
             >
-              <b>№ заказа:</b> {{order.id}}
+              <b>№ замовлення:</b> {{order.id}}
               <br />
-              <b>Спопсоб доставки:</b> {{order.delivery_method}}
+              <b>Спосіб доставки:</b> {{order.delivery_method}}
               <br />
-              <b>Спопсоб оплаты:</b> {{order.pay_method}}
+              <b>Спосіб оплати:</b> {{order.pay_method}}
             </td>
             <td
               style="
@@ -92,7 +92,7 @@
                 padding: 7px;
               "
             >
-              <b>Клиент:</b> {{order.name}}
+              <b>Клієнт:</b> {{order.name}}
               {{order.sur_name}}
               <br />
               <b>Телефон:</b> {{order.phone}}
@@ -126,7 +126,7 @@
                 color: #222222;
               "
             >
-              Примечание
+              Примітка
             </td>
           </tr>
         </thead>
@@ -198,7 +198,7 @@
                 color: #222222;
               "
             >
-              Количество
+              Кількість
             </td>
             <td
               style="
@@ -212,7 +212,7 @@
                 color: #222222;
               "
             >
-              Цена
+              Ціна
             </td>
             <td
               style="
@@ -226,7 +226,7 @@
                 color: #222222;
               "
             >
-              Итого:
+              Разом:
             </td>
           </tr>
         </thead>
@@ -306,7 +306,7 @@
               "
               colspan="4"
             >
-              <b>Сумма:</b>
+              <b>Сума:</b>
             </td>
             <td
               style="
